[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "dotenv",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5"
]

